@@ -43,14 +43,17 @@ include_once($config["base_path"] . "/lib/poller.php");
 include_once($config["base_path"] . "/lib/rrd.php");
 include_once($config["base_path"] . "/lib/ping.php");
 
-/* PHP Bug.  Not yet submitted */
+/* Correct for a Windows PHP Bug. Fixed in 5.2.0 */
 if ($config["cacti_server_os"] == "win32") {
-	$guess = substr(__FILE__,0,2);
-	if ($guess == strtoupper($guess)) {
-		$response = "ERROR: The PHP Script: CMD.PHP Must be started using the full path to the file and in lower case.  This is a PHP Bug!!!";
-		print "\n";
-		cacti_log($response,true);
-		exit(-1);
+	/* check PHP versions first, we know 5.2.0 and above is fixed */
+	if (version_compare("5.2.0", PHP_VERSION, "<")) {
+		$guess = substr(__FILE__,0,2);
+		if ($guess == strtoupper($guess)) {
+			$response = "ERROR: The PHP Script: CMD.PHP Must be started using the full path to the file and in lower case.  This is a PHP Bug!!!";
+			print "\n";
+			cacti_log($response,true);
+			exit(-1);
+		}
 	}
 }
 
