@@ -1,6 +1,7 @@
 Cacti CHANGELOG
 
 0.8.6j
+-bug#0000877: PHP 5.2.0 breaks Windows cmd.php poller
 -bug#0000884: graph_view.php lacks bottom nav bar
 -bug#0000864: Just don't sort Tree's Naturaly, sort graphs as well.
 -bug#0000883: Exploit in cmd.php with register globals enabled in php
